traefik/traefik-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
  annotations:
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: traefik-dashboard-auth
spec:
  rules:
  - host: traefik.kubernetes.example.org
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-dashboard
          servicePort: web
